hphp/hack/test/typecheck/tconst/access_expand_error_2.php
<?hh

class C {
  public C::ERROR $test = 0;
}
